@@ -24363,10 +24363,10 @@ AT_DATA([prog.cob], [
        CONFIGURATION SECTION.
        INPUT-OUTPUT SECTION.
        FILE-CONTROL.
-           SELECT FILEO
+           SELECT FILEO   ORGANIZATION SEQUENTIAL
             ASSIGN TO 'FILEO'.
 
-           SELECT FILEI
+           SELECT FILEI   ORGANIZATION SEQUENTIAL
             FILE STATUS IS FI-STS
             ASSIGN TO FILEI-NAME.
 
